[package]
name = "r_scan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stringreader = "0.1.1"
r_ast = { path = "../r_ast" }
colored = "2.0.0"

[features]
debug_trace_execution = []
use_bytecode = []
print_debug_code = []

[profile.release]
debug = true